--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,18 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
-  <title>Ecommerce</title>
+  <title>zilCommerce</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+
 </head>
-<body>
+
+<body style="margin-top:3.5rem;">
   <app-root></app-root>
 </body>
+
 </html>
